roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/05-resources/5.2-oomkilled/broken/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-5-2-svc
  labels:
    app: lab-5-2-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  selector:
    app: lab-5-2-app
  ports:
  - port: 8080
    targetPort: 8080
